<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PronouncerDlg</class>
 <widget class="QDialog" name="PronouncerDlg">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>455</width>
    <height>255</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Text-to-speech</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
        <string>Foreign text to pronounce:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QTextEdit" name="foreign_text">
       <property name="acceptRichText">
        <bool>false</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="sublanguages_label">
       <property name="text">
        <string>Language variant:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QComboBox" name="sublanguages"/>
     </item>
     <item>
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>Filename to save to:</string>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLineEdit" name="filename_box"/>
       </item>
       <item>
        <widget class="QPushButton" name="browse_button">
         <property name="text">
          <string>Browse</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QPushButton" name="preview_button">
         <property name="text">
          <string>Preview</string>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="insert_button">
         <property name="text">
          <string>Insert</string>
         </property>
         <property name="default">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="cancel_button">
         <property name="text">
          <string>Cancel</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>insert_button</sender>
   <signal>clicked()</signal>
   <receiver>PronouncerDlg</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>207</x>
     <y>251</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cancel_button</sender>
   <signal>clicked()</signal>
   <receiver>PronouncerDlg</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>317</x>
     <y>251</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>preview_button</sender>
   <signal>clicked()</signal>
   <receiver>PronouncerDlg</receiver>
   <slot>preview()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>77</x>
     <y>251</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>browse_button</sender>
   <signal>clicked()</signal>
   <receiver>PronouncerDlg</receiver>
   <slot>browse()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>287</x>
     <y>131</y>
    </hint>
    <hint type="destinationlabel">
     <x>199</x>
     <y>149</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>foreign_text</sender>
   <signal>textChanged()</signal>
   <receiver>PronouncerDlg</receiver>
   <slot>foreign_text_changed()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>223</x>
     <y>68</y>
    </hint>
    <hint type="destinationlabel">
     <x>223</x>
     <y>99</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
